--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,7 @@
         "gulp-ng-constant": "^0.2.0",
         "gulp-rename": "^1.2.2",
         "gulp-sass": "^2.0.3",
-        "gulp-sourcemaps": "^1.5.2",
+        "gulp-sourcemaps": "1.11.1",
         "gulp-uglify": "^1.0.1",
         "gulp-util": "^3.0.1",
         "jasmine-core": "^2.1.3",
