Add placeholder values
Add placeholder values for fields to be set by developer.

--- a/client/src/app.config.json
+++ b/client/src/app.config.json
@@ -10,7 +10,7 @@
             "title": "CheckIT: [asset_name] Due.",
             "notes": "Device Due."
         },
-        "googleClientId": "",
+        "googleClientId": "SET_GOOGLE_CLIENT_ID_HERE",
         "googleScopes": "https://www.googleapis.com/auth/userinfo.email",
         "buildType": "debug"
     }
