Add Google Directory API endpoint
Retrieves a list of Google users from a specified company domain using the Google Directory API.

resolves #15

--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "aws-sdk": "^2.1.43",
         "blueoak-server": "^2.0.1",
+        "googleapis": "^19.0.0",
         "gridfs-stream": "^1.1.1",
         "moment": "~2.9.0",
         "mongodb": "~2.0",
