--- a/server/swagger/v1-api/definitions/GoogleUsers.yaml
+++ b/server/swagger/v1-api/definitions/GoogleUsers.yaml
@@ -2,8 +2,12 @@ items:
   properties:
     user:
       properties:
-        email: {description: the email associated with this user, type: string}
-        name: {description: the full name of the user for displaying, type: string}
+        email: {description: the Google email associated with this user, type: string}
+        name:
+            properties:
+              first: {description: the user's first name from Google, type: string}
+              last: {description: the user's last name from Google, type: string}
+            type: object
       type: object
   type: object
 type: array
