Add employee dropdown to client
Added the angucomplete-alt dropdown package to bower.
Added the dropdown to the 'checkout for someone' else option.
Injected the employee data from the Google Directory API into
the dropdown.
Styled the dropdown to match CheckIT styling.
Set up the details.controller to use the employee's email from
the dropdown.

--- a/client/bower.json
+++ b/client/bower.json
@@ -21,7 +21,8 @@
     "angular-animate": "1.4.x",
     "foundation-sites": "6.2.x",
     "motion-ui": "^1.2.2",
-    "animate.css": "^3.5.1"
+    "animate.css": "^3.5.1",
+    "angucomplete-alt": "^3.0.0"
   },
   "resolutions": {
     "angular": "~1.4"
