Add server side logic for user dropdown
Refactored asset.service.js in client.
Before, a single method was used for both regular checking out and
checking out on behalf of someone. This was split into two different
methods; checkoutAssetForUser, and checkoutAsset.
In the details.controller.js the user information that is given to the
checkoutAssetForUser was changed to include the user's name in addition
to their email.
Refactored the checkForNewUser function to be in the usersService.js instead
of the authService.js.
Updated swagger documentation so that the client can send more
user info to the server instead of just the email when checking out a device
for someone else.

resolves #16

--- a/server/swagger/v1-api/paths/admin.assets.checkout.yaml
+++ b/server/swagger/v1-api/paths/admin.assets.checkout.yaml
@@ -17,8 +17,8 @@ post:
           type: string}
         return_date: {description: the return date of this reservation in ISO format,
           type: string}
-        userEmail: {description: The email of the user to check this device out to,
-          type: string}
+        userInfo: {description: The name and email of the user to check this device out to,
+          type: object}
   produces: [application/json]
   responses:
     '200': {description: successfully checked out asset}
