Add fallback to CheckIT user database
If the Google Directory call fails, the users in the CheckIT's database are pulled
 down in place of the Google Directory users.
This is to ensure an admin user can still search for employees, as long as the
employees are already in the CheckIT database.
Fixed bug when checking out a device with no user selected.

--- a/server/swagger/checkit-v1.yaml
+++ b/server/swagger/checkit-v1.yaml
@@ -20,6 +20,7 @@ paths:
   /auth/logout: {$ref: v1-api/paths/auth.logout.yaml}
   /records/{assetID}: {$ref: v1-api/paths/records.assetID.yaml}
   /users/me/reservations: {$ref: v1-api/paths/users.me.reservations.yaml}
+  /admin/users: {$ref: v1-api/paths/admin.users.yaml}
   /admin/users/googleDirectory: {$ref: v1-api/paths/admin.users.googleDirectory.yaml}
   
 produces: [application/json]
