Update code affected by schema changes
Updated various files on the backend to work with the updates to the
record and asset schemas.
Removed pickup_date and recordID from request body data of assetService.

Resolves #46

--- a/server/swagger/checkit-v1.yaml
+++ b/server/swagger/checkit-v1.yaml
@@ -11,6 +11,7 @@ info: {description: Device Check Out, title: CheckIT API, version: 1.3.0, licens
 paths:
   /admin/assets: {$ref: v1-api/paths/admin.assets.yaml}
   /admin/assets/checkout: {$ref: v1-api/paths/admin.assets.checkout.yaml}
+  /admin/assets/checkin: {$ref: v1-api/paths/admin.assets.checkin.yaml}
   /admin/assets/{assetID}: {$ref: v1-api/paths/admin.assets.assetID.yaml}
   /assets: {$ref: v1-api/paths/assets.yaml}
   /assets/checkin: {$ref: v1-api/paths/assets.checkin.yaml}
