--- a/server/swagger/v1-api/paths/admin.assets.assetID.yaml
+++ b/server/swagger/v1-api/paths/admin.assets.assetID.yaml
@@ -1,5 +1,5 @@
 delete:
-  description: 'Creates a new Asset from the given post body
+  description: 'Deletes an Asset specified by the assetID
 
     '
   operationId: deleteAsset
