Add preselected dates dropdown
Added the angular-dropdowns package in order to add the ability to select
checkout dates ranging from a day, a week, and a month.
Removed date restriction subtitle and updated date restriction to one month.

Resolves #61

--- a/client/bower.json
+++ b/client/bower.json
@@ -22,7 +22,8 @@
     "foundation-sites": "6.2.x",
     "motion-ui": "^1.2.2",
     "animate.css": "^3.5.1",
-    "angucomplete-alt": "^3.0.0"
+    "angucomplete-alt": "^3.0.0",
+    "angular-dropdowns": "^1.5.1"
   },
   "resolutions": {
     "angular": "~1.4"
