--- a/server/swagger/v1-api/definitions/NewAsset.yaml
+++ b/server/swagger/v1-api/definitions/NewAsset.yaml
@@ -10,7 +10,7 @@ properties:
         type: object
       type:
         description: the kind of asset
-        enum: [phone, tablet, laptop, camera, software, misc]
+        enum: [phone, tablet, laptop, camera, software, book, misc]
         type: string
     type: object
   description: {description: the title of the asset, type: string}
