Update to use current logged in user for Directory API
Retain legacy methods, but add new methods to allow for authentication using the current users access token.  Updated the existing server getGoogleUsers to allow for an optional token passed through from the client, but also added a new method on the client to bypass the server call and go to Google directly.  Work still needs to be done to integrate the Cordova app with these changes.

--- a/client/src/app.config.json
+++ b/client/src/app.config.json
@@ -5,9 +5,10 @@
             "os": ["iOS", "Android", "Windows", "WatchOS", "FireOS", "OSX", "N/A"],
             "type": ["phone", "tablet", "laptop", "camera", "software", "book", "misc"],
             "location": ["Raleigh", "Chicago"]
-        },
+		},
+		"domain": "SET_DOMAIN_HERE",
         "googleClientId": "SET_GOOGLE_CLIENT_ID_HERE",
-        "googleScopes": "https://www.googleapis.com/auth/userinfo.email",
+        "googleScopes": "https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/admin.directory.user.readonly",
         "buildType": "debug"
     }
 }
