--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,7 @@
         "blueoak-server": "^2.0.1",
         "googleapis": "^19.0.0",
         "gridfs-stream": "^1.1.1",
-        "moment": "~2.9.0",
+        "moment": "^2.21.0",
         "mongodb": "~2.0",
         "mongoose": "^4.0.2",
         "request": "^2.51.0",
