--- a/client/bower.json
+++ b/client/bower.json
@@ -3,7 +3,7 @@
   "version": "3.3.1",
   "license": "MIT",
   "authors": [
-    "PointSource LLC <github@pointsource.com>"
+    "PointSource LLC <pointsource-github@globant.com>"
   ],
   "dependencies": {
     "angular": "1.4.x",
